Added email API and updated candidates table
