# src/codegen_server/openapi_server/models/__init__.py
@@ -4,6 +4,7 @@ from openapi_server.models.attribute import Attribute
 from openapi_server.models.audio_object import AudioObject
 from openapi_server.models.audio_request import AudioRequest
 from openapi_server.models.candidate_request import CandidateRequest
+from openapi_server.models.email_request import EmailRequest
 from openapi_server.models.error import Error
 from openapi_server.models.get_candidate_object import GetCandidateObject
 from openapi_server.models.get_job_object import GetJobObject
@@ -15,6 +16,7 @@ from openapi_server.models.respone_object import ResponeObject
 from openapi_server.models.save_candidates200_response import SaveCandidates200Response
 from openapi_server.models.save_job_object import SaveJobObject
 from openapi_server.models.save_question_object import SaveQuestionObject
+from openapi_server.models.send_email_object import SendEmailObject
 from openapi_server.models.status import Status
 from openapi_server.models.user_object import UserObject
 from openapi_server.models.user_request import UserRequest
