# src/codegen_server/openapi_server/openapi/openapi.yaml
@@ -167,6 +167,35 @@ paths:
       tags:
       - swagger_ui
       x-openapi-router-controller: openapi_server.controllers.swagger_ui_controller
+  /email:
+    post:
+      description: This API is used to send email to shortlisted candidates
+      operationId: send_email
+      parameters:
+      - explode: false
+        in: header
+        name: accept_version
+        required: false
+        schema:
+          default: v1
+          type: string
+        style: simple
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/EmailRequest'
+      responses:
+        "200":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/SendEmailObject'
+          description: Email sent successfully
+      summary: To send email to shortlisted candidates
+      tags:
+      - email
+      x-openapi-router-controller: openapi_server.controllers.email_controller
   /jd/upload:
     post:
       description: This API is used to upload JD
@@ -581,9 +610,12 @@ components:
       title: QuestionRequest
     JobRequest:
       example:
+        id: id,
         role: role
         hr_email: hr_email
       properties:
+        id:
+          type: integer
         role:
           type: string
         hr_email:
@@ -611,6 +643,24 @@ components:
         jobid:
           type: integer
       title: CandidateRequest
+      type: object
+    EmailRequest:
+      example:
+        name: name
+        role: role
+        email: email
+        login_code: login_code
+      properties:
+        name:
+          type: string
+        role:
+          type: string
+        email:
+          format: email
+          type: string
+        login_code:
+          type: integer
+      title: EmailRequest
       type: object
     AudioObject:
       example:
@@ -759,6 +809,14 @@ components:
         message:
           type: string
       title: save_candidates_200_response
+      type: object
+    SendEmailObject:
+      example:
+        message: message
+      properties:
+        message:
+          type: string
+      title: SendEmailObject
       type: object
   securitySchemes:
     basicAuth:
